# thingino-cloner

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: STRUCTURE.md  USB_CAPTURE_FRAMEWORK.md
docs/reports/: CAPTURE_VENDOR_T20.md  SESSION_SUMMARY.md  T20_SUPPORT_STATUS.md  WORKFLOW_DIAGRAM.md
include/: flash_descriptor.h  thingino.h
references/cloner-2.5.43-ubuntu_thingino/: qm_cn.qm
references/cloner-2.5.43-ubuntu_thingino/configs/: platforms.cfg
references/cloner-2.5.43-ubuntu_thingino/configs/ad100/: ad100_mmc0_ddr2_linux.cfg  ad100_sfc_nand_ddr2_linux.cfg  ad100_sfc_nand_ota_ddr2_linux.cfg  ad100_sfc_nor_ddr2_linux.cfg  ad100_sfc_nor_dtb_ddr2_linux.cfg  ad101_mmc0_ddr2_linux.cfg  (+4 more)
scripts/capture/: capture_vendor_t20.sh
src/: bootstrap.c  main.c  test_complete_workflow  test_ddr_generator.c  test_ddr_multiplechip.c  test_device_firmware_read  test_device_firmware_read.c  test_firmware_reader  test_firmware_reader.c  utils.c
src/ddr/: ddr_controller.c  ddr_ctrl_txx.c  ddr_ctrl_txx.h  ddr_generator.c  ddr_param_builder.c  ddr_param_builder.h  ddr_phy.c  ddr_phy_common.h  ddr_phy_ddr2.c  ddr_phy_ddr2.h  ddr_types.h  ddr_utils.c  parser.c
src/firmware/: flash_descriptor.c  handshake.c  loader.c  reader.c  reader_new.c  writer.c
src/usb/: device.c  device_fixed.c  manager.c  protocol.c
tests/integration/: test_complete_workflow.c
tests/unit/ddr/: test_ddr_mapping_analysis.c  test_ddr_reference_analysis.c  test_ddrc_analysis.c  test_txx_mapping_analysis.c
tests/unit/usb/: test_usb.c
tools/: README.md  write_sequence.c
(+81 files in other folders)
